--- a/index.html
+++ b/index.html
@@ -1,82 +1,138 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Smart Hydration Calculator</title>
-  <!-- Bootstrap CSS (v5.3.x) -->
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
-  <!-- Google Font -->
-  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>Smart Hydration & Body Water Calculator</title>
+  <!-- Bootstrap CSS (v5.3) -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" />
+  <!-- Google Fonts: Roboto -->
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet" />
   <!-- FontAwesome Icons -->
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" integrity="sha512-pD35yUV3D0nU6WsoS5zg09GiJ6IVexu8IY64+XzEL+COZPjzV/TZ9q91dJ3Wez58E5j1wz4W73t5wVdk7l0P0A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" 
+        integrity="sha512-pD35yUV3D0nU6WsoS5zg09GiJ6IVexu8IY64+XzEL+COZPjzV/TZ9q91dJ3Wez58E5j1wz4W73t5wVdk7l0P0A==" 
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
   <!-- Custom CSS -->
-  <link rel="stylesheet" href="styles.css">
+  <link rel="stylesheet" href="styles.css" />
 </head>
 <body>
-  <!-- Navigation Bar -->
+  <!-- Navigation Bar with Dark Mode Toggle -->
   <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
     <div class="container">
       <a class="navbar-brand" href="#">
         <i class="fa-solid fa-water"></i> Smart Hydration
       </a>
+      <button class="btn btn-sm btn-light ms-auto" id="darkModeToggle">
+        <i class="fa-solid fa-moon"></i> Dark Mode
+      </button>
     </div>
   </nav>
 
   <!-- Main Content -->
   <main class="container my-5">
     <div class="row justify-content-center">
-      <div class="col-lg-8">
+      <div class="col-lg-10">
         <div class="card shadow">
           <div class="card-header bg-info text-white">
-            <h4 class="mb-0"><i class="fa-solid fa-calculator"></i> Hydration Calculator</h4>
+            <h4 class="mb-0"><i class="fa-solid fa-calculator"></i> Hydration & Body Water Calculator</h4>
           </div>
           <div class="card-body">
             <form id="hydrationForm" novalidate>
               <div class="row g-3">
+                <!-- Age Input -->
                 <div class="col-md-4">
-                  <label for="age" class="form-label">Age (years)</label>
-                  <input type="number" class="form-control" id="age" min="18" max="150" placeholder="e.g., 45" required>
+                  <label for="age" class="form-label">
+                    <i class="fa-solid fa-calendar-day"></i> Age (years)
+                  </label>
+                  <div class="input-group">
+                    <span class="input-group-text"><i class="fa-solid fa-calendar-day"></i></span>
+                    <input type="number" class="form-control" id="age" min="18" max="150" placeholder="e.g., 45" required>
+                  </div>
                 </div>
+                <!-- Height Input -->
                 <div class="col-md-4">
-                  <label for="height" class="form-label">Height (cm)</label>
-                  <input type="number" class="form-control" id="height" min="1" placeholder="e.g., 170" required>
+                  <label for="height" class="form-label">
+                    <i class="fa-solid fa-ruler"></i> Height (cm)
+                  </label>
+                  <div class="input-group">
+                    <span class="input-group-text"><i class="fa-solid fa-ruler"></i></span>
+                    <input type="number" class="form-control" id="height" min="1" placeholder="e.g., 170" required>
+                  </div>
                 </div>
+                <!-- Weight Input -->
                 <div class="col-md-4">
-                  <label for="weight" class="form-label">Weight (kg)</label>
-                  <input type="number" class="form-control" id="weight" min="1" placeholder="e.g., 75" required>
+                  <label for="weight" class="form-label">
+                    <i class="fa-solid fa-weight-hanging"></i> Weight (kg)
+                  </label>
+                  <div class="input-group">
+                    <span class="input-group-text"><i class="fa-solid fa-weight-hanging"></i></span>
+                    <input type="number" class="form-control" id="weight" min="1" placeholder="e.g., 75" required>
+                  </div>
                 </div>
+                <!-- Gender Input -->
                 <div class="col-md-4">
-                  <label for="gender" class="form-label">Gender</label>
-                  <select id="gender" class="form-select" required>
-                    <option value="">Select...</option>
-                    <option value="M">Male</option>
-                    <option value="F">Female</option>
-                  </select>
+                  <label for="gender" class="form-label">
+                    <i class="fa-solid fa-venus-mars"></i> Gender
+                  </label>
+                  <div class="input-group">
+                    <span class="input-group-text"><i class="fa-solid fa-venus-mars"></i></span>
+                    <select id="gender" class="form-select" required>
+                      <option value="">Select...</option>
+                      <option value="M">Male</option>
+                      <option value="F">Female</option>
+                    </select>
+                  </div>
                 </div>
+                <!-- Fat-Free Mass Input -->
                 <div class="col-md-4">
-                  <label for="ffm" class="form-label">Fat-Free Mass (kg)</label>
-                  <input type="number" class="form-control" id="ffm" min="1" placeholder="e.g., 55" required>
+                  <label for="ffm" class="form-label">
+                    <i class="fa-solid fa-balance-scale"></i> Fat-Free Mass (kg)
+                  </label>
+                  <div class="input-group">
+                    <span class="input-group-text"><i class="fa-solid fa-balance-scale"></i></span>
+                    <input type="number" class="form-control" id="ffm" min="1" placeholder="e.g., 55" required>
+                  </div>
                 </div>
+                <!-- Muscle Mass Input -->
                 <div class="col-md-4">
-                  <label for="muscleMass" class="form-label">Muscle Mass (kg)</label>
-                  <input type="number" class="form-control" id="muscleMass" min="0" placeholder="e.g., 50" required>
+                  <label for="muscleMass" class="form-label">
+                    <i class="fa-solid fa-dumbbell"></i> Muscle Mass (kg)
+                  </label>
+                  <div class="input-group">
+                    <span class="input-group-text"><i class="fa-solid fa-dumbbell"></i></span>
+                    <input type="number" class="form-control" id="muscleMass" min="0" placeholder="e.g., 50" required>
+                  </div>
                 </div>
+                <!-- Measured TBW Input -->
                 <div class="col-md-6">
-                  <label for="measuredTBW" class="form-label">Measured TBW (L)</label>
-                  <input type="number" class="form-control" id="measuredTBW" min="1" placeholder="e.g., 42" required>
+                  <label for="measuredTBW" class="form-label">
+                    <i class="fa-solid fa-water"></i> Measured Total Body Water (L)
+                  </label>
+                  <div class="input-group">
+                    <span class="input-group-text"><i class="fa-solid fa-water"></i></span>
+                    <input type="number" class="form-control" id="measuredTBW" min="1" placeholder="e.g., 42" required>
+                  </div>
                 </div>
               </div>
-              <div class="mt-4">
-                <button type="submit" class="btn btn-primary w-100"><i class="fa-solid fa-arrow-right"></i> Calculate Hydration</button>
+              <!-- Submit and Export Buttons -->
+              <div class="mt-4 d-flex gap-2">
+                <button type="submit" class="btn btn-primary flex-fill">
+                  <i class="fa-solid fa-arrow-right"></i> Calculate Hydration
+                </button>
+                <button type="button" class="btn btn-success flex-fill" id="exportBtn">
+                  <i class="fa-solid fa-file-export"></i> Export to CSV
+                </button>
               </div>
             </form>
+
+            <!-- Results Section -->
             <div id="result" class="mt-4 d-none">
               <div class="alert alert-success" role="alert">
                 <h5 class="alert-heading"><i class="fa-solid fa-check"></i> Results</h5>
-                <p id="resultText"></p>
+                <div id="resultText"></div>
               </div>
             </div>
+            <!-- Error Section -->
             <div id="error" class="mt-4 d-none">
               <div class="alert alert-danger" role="alert">
                 <i class="fa-solid fa-triangle-exclamation"></i> <span id="errorText"></span>
